--- a/ms/invasibility-ms.bib
+++ b/ms/invasibility-ms.bib
@@ -497,18 +497,6 @@
   number = {10}
 }
 
-@article{katul2005mechanistic,
-  title = {Mechanistic Analytical Models for Long-Distance Seed Dispersal by Wind},
-  author = {Katul, GG and Porporato, A and Nathan, R and Siqueira, M and Soons, MB and Poggi, D and Horn, HS and Levin, SA},
-  year = {2005},
-  volume = {166},
-  pages = {368--381},
-  publisher = {{The University of Chicago Press}},
-  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Katul et al. - 2005 - Mechanistic analytical models for long-distance se.pdf;C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Katul et al. - 2005 - zapp1.pdf;C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Katul et al. - 2005 - zapp2.pdf;C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Katul et al. - 2005 - zapp3.pdf;C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Katul et al. - 2005 - zapp4.pdf},
-  journal = {The American Naturalist},
-  number = {3}
-}
-
 @article{katulEffectsGentleTopographic2012,
   title = {The Effects of Gentle Topographic Variation on Dispersal Kernels of Inertial Particles},
   author = {Katul, G. G. and Poggi, D.},
@@ -520,6 +508,17 @@
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Katul_Poggi_2012_The effects of gentle topographic variation on dispersal kernels of inertial.pdf;C\:\\Users\\julienv\\Zotero\\storage\\37ZPDPRE\\2011GL050811.html},
   journal = {Geophysical Research Letters},
   language = {en},
+  number = {3}
+}
+
+@article{katulMechanisticAnalyticalModels2005,
+  title = {Mechanistic Analytical Models for Long-Distance Seed Dispersal by Wind},
+  author = {Katul, GG and Porporato, A and Nathan, R and Siqueira, M and Soons, MB and Poggi, D and Horn, HS and Levin, SA},
+  year = {2005},
+  volume = {166},
+  pages = {368--381},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Katul et al. - 2005 - Mechanistic analytical models for long-distance se.pdf;C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Katul et al. - 2005 - zapp1.pdf;C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Katul et al. - 2005 - zapp2.pdf;C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Katul et al. - 2005 - zapp3.pdf;C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Katul et al. - 2005 - zapp4.pdf},
+  journal = {The American Naturalist},
   number = {3}
 }
 
