--- a/ms/invasibility-ms.Rmd
+++ b/ms/invasibility-ms.Rmd
@@ -144,16 +144,26 @@ We used two models of seed dispersal to derive two different estimates of seed p
 The first model was an empirical seed dispersal location kernel [@nathanDispersalKernels2012], with parameter estimates generalized from multiple data sets.
 Specifically, we selected from Bullock et al. [-@bullockSynthesisEmpiricalPlant2017] the kernel that performed best for 5-15 m tall trees with wind-adapted seeds (an Exponential Power function).
 Fifty-seven of the 63 plantations in our data set matched this height range better than a taller height range with a different kernel.
+For this first model, polygons of seed sources were transformed into point sources by...
 
 The second model was mechanistic, using local wind velocity and direction to parameterize the Wald Analytical Long-distance Dispersal [WALD, @katulMechanisticAnalyticalModels2005] model in different directions from seed sources [following @skarpaasDispersalPatternsDispersal2007].
-...weighted by the frequency distribution of wind directions during the species' dispersal season (Appendix [A2]).
+The WALD model takes the form of an inverse Gaussian distribution whose mean ($\mu$) and shape ($\lambda$) parameters are calculated from physical characteristics of the dispersal system:
+$$\mu  = \frac{HU}{F}$$
+$$\lambda = \left(\frac{H}{\sigma}\right)^2$$
+where $H$ is the seed release height, $U$ is the mean horizontal wind velocity between $H$ and the ground, $F$ is the terminal velocity of the seed, and $\sigma$ is a wind turbulence parameter that we estimated as a function of vegetation height [see Appendix in @skarpaasDispersalPatternsDispersal2007 for details].
+We parameterized separate WALD models for 20-degree sectors around seed sources, to make seed dispersal anisotropic.
+In each sector we estimated vegetation height based on the composition of mapped ecosystem types (Appendix [A2]), and randomly sampled 100 wind velocities from all measurements with that direction.
+The seed probability density in the sector was obtained by summing the estimates of the 100 resulting WALD kernels. 
+We combined all sectors around a source, weighted by the frequency distribution of wind directions during the species' dispersal season (Appendix [A3]).
+For this second model, polygons of seed sources were transformed into point sources by...
 
+We used wind data from...
 
 ## Establishment frequency
 
 (fig. \@ref(fig:locality-example))
 
-```{r locality-example, fig.cap='A illustration of data from one of the 63 plantation localities: Meaasen. The background map shows the surroundings of the plantation, and the 500x500 m plot is overlaid with an aerial photograph. The middle row of panels represents the data as registered in the field (NiN polygons not shown). The top and bottom rows of panels represent selected variables as they enter the regression model (with a spatial grain of 10 m)'}
+```{r locality-example, fig.cap='A illustration of data from one of the 63 plantation localities: Meaasen. The background map shows the surroundings of the plantation, and the 500x500 m plot is overlaid with an aerial photograph. The middle row of panels represents the data as registered in the field (NiN polygons not shown). The top and bottom rows of panels represent selected variables as they enter the regression model (with a spatial grain of 10 m).'}
 knitr::include_graphics('figures/locality-example/locality-example.pdf')
 ```
 
@@ -219,6 +229,57 @@ kable(locs, escape = FALSE, align = "lllrrrrrr") %>%
 ```
 
 ## A2
+
+```{r recreate vegheight table, include=FALSE}
+types <- read_csv(here('data', 'typenames.csv'))
+grouping <- tribble( # from 'locality-WALD.Rmd'
+  ~code, ~group, ~vegheight,
+  "T1", "T1", 0,
+  "T2", "T2", 0.5,
+  "T3", "T3", 0.5,
+  "T4", "T4", 10,
+  "T6", "T6", 0,
+  "T12", "T12", 0.5,
+  "T13", "T13", 0,
+  "T16", "T16", 0.5,
+  "T17", "T17", 0,
+  "T18", "T18", 0,
+  "T21", "T21", 0,
+  "T24", "T24", 0.5,
+  "T27", "T27", 0,
+  "T29", "T29", 0,
+  "T30", "T30", 10,
+  "T31", "T31", 0.5,
+  "T32", "T32", 0.5,
+  "T33", "T33", 0.5,
+  "T34", "T34", 0.5,
+  "T35", "artificial", 0,
+  "T36", "T36", 0.5,
+  "T37", "artificial", 0,
+  "T38", "plantation forest", 10,
+  "T39", "artificial", 0,
+  "T40", "T40", 0,
+  "T41", "T41", 0.5,
+  "T42", "T42", 0,
+  "T43", "artificial", 0,
+  "T44", "T44", 0.5,
+  "T45", "T45", 0.5,
+  "T35.T37.T39.T43", "artificial", 0,
+  "T35.T37", "artificial", 0,
+  "V1", "V1", 0,
+  "V2", "V2", 10,
+  "V3", "V3", 0,
+  "V4", "V4", 0,
+  "V8", "V8", 10,
+  "V9", "V9", 0,
+  "V10", "V10", 0,
+  "V11", "V11", 0,
+  "V12", "V12", 0,
+  "V13", "V13", 0)  
+```
+
+
+## A3
 
 ```{r recreate traits-table, include=FALSE}
 traits <- tribble(
